--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link href="https://DiscountsFromAli.github.io/GETAWAY-DEALS/css/main.css" rel="stylesheet">
+    <link href="./css/main_X_Cubot.css" rel="stylesheet">
 </head>
 <body>
     <div class="fraim">
-        <div class="elipse1"></div>
+
         <div class="elipse2"></div>
-        <div class="elipse3"></div>
+
         <div class="main_logo"></div>
         <span class="main_logo_text">DISCOUNTS FROM ALI</span>
         <span class="slogan_text">🌶 з нами дешевше!</span>
@@ -29,59 +29,83 @@
 
         <div class="cat_img"></div>
 
-        <span class="main_text">ЗАПРОШУЄМО ВАС ПРИЙНЯТИ <br>УЧАСТЬ В РОЗПРОДАЖУ:</span>
-        <span class="action_name">GETAWAY DEALS</span>
-        <span class="up_to">Up to 70% off (July 14 - July 20)</span>
+        <span class="main_text">ЗАПРОШУЄМО ВАС ПРИЙНЯТИ <br>УЧАСТЬ В СВІТОВІЙ ПРЕМ'ЄРІ:</span>
+        <span class="action_name">TOP BRANDS: X CUBOT</span>
+        <span class="up_to">July 22nd - 24th, 2024<br>- Up to 80% off<br>- Limited freebies,<br>- Extra savings with coupon codes</span>
         <span class="holovna_page">ГОЛОВНА СТОРІНКА</span>
-        <a href='https://s.click.aliexpress.com/e/_DFpVUQP' class="holovna_pagelink"></a>
+        <a href='https://s.click.aliexpress.com/e/_DDzK9An' class="holovna_pagelink"></a>
 
-        <span class="holovna_page_ua">ГОЛОВНА СТОРІНКА - UA</span><br>
-            <a href='https://s.click.aliexpress.com/e/_DD2TMDH' class="holovna_pagelink_ua"></a>
+        <span class="premjera_text">ПРЕМ'ЄРА</span>
+            <a href='https://s.click.aliexpress.com/e/_DeHR3Qn' class="holovna_pagelink"></a>
 
-        <span class="bestsellers_text">BESTSELLERS</span><br>
-            <a href='https://s.click.aliexpress.com/e/_Ddn4luJ' class="bestsellers_pagelink"></a>
+        <span class="kingkong_text">KINGKONG X</span><br>
+            <a href='https://s.click.aliexpress.com/e/_DBlPNY7' class="kingkong_pagelink"></a>
+        <span class="max5">MAX 5</span><br>
+            <a href='https://s.click.aliexpress.com/e/_ontXaU0' class="max5_pagelink"></a>
+
 
         <span class="bestsellers-text_ua">BESTSELLERS - UA</span>
-            <a href='https://s.click.aliexpress.com/e/_Ddn4luJ' class="bestsellers_pagelink_ua"></a>
+            <a href='https://s.click.aliexpress.com/e/_Ddn4luJ' class="m"></a>
 
         <span class="promocodes">ПРОМОКОДИ</span><br>
         <span class="smart_links">КОРИСНІ ПОСИЛАННЯ</span><br>
-        <span class="thanks">シ Дякуємо що ви з нами, приємних покупок!</span><br>
-        <div class="code_container3">
-            <span class="code_word">CODE:</span>
-            <span class="code_text3">AEGD03</span><br>
-            <span class="code_sum3">$3/$29</span><br>
-            <span class="date-code">Jul 14, 2024 12:00:00 AM -- Jul 20, 2024</span>
-            <span class="code_link3"><a href="https://s.click.aliexpress.com/e/_omlQJVw" target="_parent">https://s.click.aliexpress.com/e/_omlQJVw</a></span>
+
+        <div class="kingkong_codecontainer">
+            <span class="kingkong_codeword">CODE:</span>
+            <span class="kingkong_codetext">KKXSBD</span><br>
+            <span class="kingkong_codesum">$10/$129</span><br>
+            <span class="datecode_kingkong">July 22 --- July 24</span><br>
         </div>
-        <div class="code_container8">
-            <span class="code_word">CODE:</span>
-            <span class="code_text8">AEGD08</span><br>
-            <span class="code_sum8">$8/$69</span><br>
-            <span class="date-code">Jul 14, 2024 12:00:00 AM -- Jul 20, 2024</span>
-            <span class="code_link8"><a href="https://s.click.aliexpress.com/e/_okzKL5K" target="_parent">https://s.click.aliexpress.com/e/_okzKL5K</a></span>
+        <div class="max5_codecontainer">
+            <span class="max5_codeword">CODE:</span>
+            <span class="max5_codetext">MAX5SBD</span><br>
+            <span class="max5_codesum">$10/$129</span><br>
+            <span class="datecode_max5">July 22 --- July 24</span><br>
         </div>
-        <div class="code_container20">
-            <span class="code_word">CODE:</span>
-            <span class="code_text20">AEGD20</span><br>
-            <span class="code_sum20">$20/$169</span><br>
-            <span class="date-code">Jul 14, 2024 12:00:00 AM -- Jul 20, 2024</span>
-            <span class="code_link20"><a href="https://s.click.aliexpress.com/e/_oDsGSlm" target="_parent">https://s.click.aliexpress.com/e/_oDsGSlm</a></span>
+
+        <span class="bestsellers_text">BESTSELLERS</span>
+            <a href='https://s.click.aliexpress.com/e/_DBpQE0R' class="bestsellers_pagelink"></a>
+        <div class="ACE3_codecontainer">
+            <span class="ACE3_codeword">CODE for KINGKONG ACE 3:</span>
+            <span class="ACE3_codetext">KKACE3SBD</span><br>
+            <span class="ACE3_codesum">$10/$129</span><br>
+            <span class="datecode_ACE3">July 22 --- July 24</span><br>
         </div>
-        <div class="code_container30">
-            <span class="code_word">CODE:</span>
-            <span class="code_text30">AEGD30</span><br>
-            <span class="code_sum30">$30/$239</span><br>
-            <span class="date-code">Jul 14, 2024 12:00:00 AM -- Jul 20, 2024</span>
-            <span class="code_link30"><a href="https://s.click.aliexpress.com/e/_olOmrbW" target="_parent">https://s.click.aliexpress.com/e/_olOmrbW</a></span>
+            <div class="codecontainer3">
+            <span class="codeword3">CODE:</span>
+            <span class="codetext3">2USD71</span><br>
+            <span class="codesum3">$2/$3</span><br>
+            <span class="datecode3">July 22 --- July 24</span><br>
         </div>
-        <div class="code_container50">
-            <span class="code_word">CODE:</span>
-            <span class="code_text50">AEGD50</span><br>
-            <span class="code_sum50">$50/$369</span><br>
-            <span class="date-code">Jul 14, 2024 12:00:00 AM -- Jul 20, 2024</span>
-            <span class="code_link50"><a href="https://s.click.aliexpress.com/e/_oDUvJXe" target="_parent">https://s.click.aliexpress.com/e/_oDUvJXe</a></span>
         </div>
+            <div class="codecontainer99">
+            <span class="codeword99">CODE:</span>
+            <span class="codetext99">K94P8WKA2J28</span><br>
+            <span class="codesum99">$2/$99</span><br>
+            <span class="datecode99">July 22 --- July 24</span><br>
+        </div>
+        </div>
+            <div class="codecontainer189">
+            <span class="codeword189">CODE:</span>
+            <span class="codetext189">GJEI3OFHACH2</span><br>
+            <span class="codesum189">$5/$189</span><br>
+            <span class="datecode189">July 22 --- July 24</span><br>
+        </div>
+        </div>
+            <div class="codecontainer219">
+            <span class="codeword219">CODE:</span>
+            <span class="codetext219">VJKQIJ2J6N5R</span><br>
+            <span class="codesum219">$10/$219</span><br>
+            <span class="datecode219">July 22 --- July 24</span><br>
+        </div>
+        </div>
+            <div class="codecontainer399">
+            <span class="codeword399">CODE:</span>
+            <span class="codetext399">FRIR76ZND6OX</span><br>
+            <span class="codesum399">$20/$399</span><br>
+            <span class="datecode399">July 22 --- July 24</span><br>
+        </div>
+
 
         <div class="coins_sale_block">
 
@@ -115,22 +139,10 @@
                     <span class="pedro_bot_text">бот для перевірки цін -  шукає за всіма можливим Вашими посиланням AliExpress, включаючи копіювання з мобільного додатку з текстом та дає три посилання на акційні розділи Aliexpress</span>
                 </a>
         </div>
+        <div class="thanks_container">
+            <span class="thanks">シ Дякуємо що ви з нами, приємних покупок!</span><br>
+        </div>
     </div>
-    <script>
-        function redirectToPage() {
-            if (window.matchMedia("(min-width: 1024px) and (max-width: 1600px)").matches) {
-                window.location.href = "https://discountsfromali.github.io/DISCOUNTS-FROM-ALI/";
-            }
-        }
-
-        // Викликати функцію при завантаженні сторінки
-        window.addEventListener('load', redirectToPage);
-
-        // Викликати функцію при зміні розміру вікна
-        window.addEventListener('resize', redirectToPage);
-    </script>
-    
-    
 
 </body>
 </html>
