--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         <div class="cat_img"></div>
 
-        <span class="main_text">ЗАПРОШУЄМО ВАС ПРИЙНЯТИ <br>УЧАСТЬ В СВІТОВІЙ ПРЕМ'ЄРІ:</span>
+        <span class="main_text">ЗАПРОШУЄМО ВАС ПРИЙНЯТИ <br>УЧАСТЬ У СВІТОВІЙ ПРЕМ'ЄРІ:</span>
         <span class="action_name">TOP BRANDS: X CUBOT</span>
         <span class="up_to">July 22nd - 24th, 2024<br>- Up to 80% off<br>- Limited freebies,<br>- Extra savings with coupon codes</span>
         <span class="holovna_page">ГОЛОВНА СТОРІНКА</span>
